--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConStr": "server = 103.130.212.186; database = hana_taekwondo; uid = hanaadmin; password = A@123456;TrustServerCertificate=True"
+    "ConStr": "server = localhost; database = hana_taekwondo; uid = sa; password = 123456789;TrustServerCertificate=True"
   },
   "Jwt": {
     "Key": "ohCxIVCVQwgCKN3Xs9EAqCQlfoduvjoU",
