--- a/StudentManagement/appsettings.json
+++ b/StudentManagement/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ConStr": "server = 103.130.212.186; database = hana_taekwondo; uid = hanaadmin; password = A@123456;TrustServerCertificate=True",
-    "LocalConStr": "server = localhost; database = hana_taekwondo; uid = sa; password = 123; TrustServerCertificate = True"
+    "LocalConStr": "server = localhost; database = hana_taekwondo; uid = sa; password = 123456789; TrustServerCertificate = True"
   },
   "Jwt": {
     "Key": "ohCxIVCVQwgCKN3Xs9EAqCQlfoduvjoU",
